2005-10-08  Stephen Deasey  <sdeasey@users.sf.net>

	* include/.cvsignore: Ignore generated nsconfig.h.

2005-10-08  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* configure.in: emit warning for Darwin builds about
	MT-unsafeness of DNS calls (getnameinfo, getaddrinfo).

	* configure: regenerated
	
	* nsd/dns.c: added critical sections in GetHost/GetAddr
	when using getnameinfo/getaddrinfo on Darwin platforms.
	Also, in GetHost(), explicitly initialize the struct
	sockaddr_in sin_len element because this is needed for
	the Darwin getnameinfo implementation.

	* tests/ns_hostbyaddr.test: resolving 0.0.0.0 on Darwin
	always succeeds, hence this test is constrainted on
	"nonDarwin".

	* include/ns.h:       Use (where possible) Tcl wrappers when
	* include/nscheck.h:  accessing files on the filesystem.
	* nsd/adpeval.c:      Exceptions are: temp files and logs.
	* nsd/adprequest.c:   Special cases are in fastpath.c, adpeval.c,
	* nsd/binder.c:       adprequest.c and urlopen.c where the native
	* nsd/config.c:       call is performed first, and if failed, the
	* nsd/conn.c:         Tcl companion is tried next. This way the
	* nsd/driver.c:       simple but effective VFS fallback is assured. 
	* nsd/fastpath.c:
	* nsd/init.c:         Status before those changes is tagged as
	* nsd/log.c:          "before-tclvfs" in order to simplify backoff
	* nsd/modload.c:      if needed.
	* nsd/nsconf.c:
	* nsd/nsmain.c:
	* nsd/pidfile.c:
	* nsd/rollfile.c:
	* nsd/tclcmds.c:
	* nsd/tclfile.c:
	* nsd/tclimg.c:
	* nsd/urlopen.c:
	* tcl/compat.tcl:
	* tests/http_byteranges.test:

	* nsd/nsmain.c: added alarm of 300 seconds for the watchdog
	on Darwin. When the alarm triggers, the watchdog re-checks
	the existence of the server process (by sending kill 0) and
	clears nsconf-pid value if the process is gone. This is the
	signal to re-start the server again. All this mess is needed
	because under some strange circumstances, the WaitForServer()